--- a/app.json
+++ b/app.json
@@ -8,19 +8,16 @@
     "scheme": "ludo",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "androidStatusBar": {
       "hidden": true,
       "translucent": true,
       "backgroundColor": "#000000"
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "android": {
-      "package": "com.anonymous.ludo",
+      "package": "com.nobita.ludo",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -30,12 +27,10 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
-
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       [
@@ -49,9 +44,9 @@
         }
       ],
       "expo-font",
-      "expo-audio"
+      "expo-audio",
+      "expo-web-browser"
     ],
-
     "experiments": {
       "typedRoutes": true
     }
