--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@clerk/clerk-expo": "^2.19.23",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.12.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.11.2",
     "convex": "^1.31.7",
     "expo": "~54.0.33",
@@ -23,6 +23,7 @@
     "expo-audio": "~1.1.1",
     "expo-auth-session": "~7.0.10",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
@@ -34,6 +35,7 @@
     "expo-navigation-bar": "~5.0.10",
     "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
