--- a/package.json
+++ b/package.json
@@ -1,71 +1,1 @@
-{
-  "name": "ludo",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
-  },
-  "dependencies": {
-    "@clerk/clerk-expo": "^2.19.23",
-    "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-navigation/native": "^7.1.8",
-    "@react-navigation/native-stack": "^7.3.16",
-    "@reduxjs/toolkit": "^2.11.2",
-    "convex": "^1.31.7",
-    "expo": "~54.0.33",
-    "expo-asset": "~12.0.12",
-    "expo-audio": "~1.1.1",
-    "expo-auth-session": "~7.0.10",
-    "expo-blur": "~15.0.8",
-    "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.13",
-    "expo-crypto": "~15.0.8",
-    "expo-dev-client": "~6.0.20",
-    "expo-font": "~14.0.11",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "~8.0.11",
-    "expo-navigation-bar": "~5.0.10",
-    "expo-router": "~6.0.23",
-    "expo-secure-store": "~15.0.8",
-    "expo-sharing": "~14.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-web-browser": "~15.0.10",
-    "lottie-react-native": "~7.3.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-mmkv": "^4.1.2",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
-  },
-  "devDependencies": {
-    "@react-native-community/cli": "^20.1.1",
-    "@react-native-community/cli-platform-android": "^20.1.1",
-    "@react-native-community/cli-platform-ios": "^20.1.1",
-    "@react-native/metro-config": "^0.84.0",
-    "@types/react": "~19.1.0",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
-}
+{"name":"ludo","main":"expo-router/entry","version":"1.0.0","scripts":{"start":"expo start","reset-project":"node ./scripts/reset-project.js","android":"expo run:android","ios":"expo run:ios","web":"expo start --web","lint":"expo lint"},"dependencies":{"@clerk/clerk-expo":"^2.19.23","@expo/server":"^0.5.3","@expo/vector-icons":"^15.0.3","@react-native-async-storage/async-storage":"2.2.0","@react-native-community/netinfo":"11.4.1","@react-navigation/native":"^7.1.8","@react-navigation/native-stack":"^7.3.16","@reduxjs/toolkit":"^2.11.2","convex":"^1.31.7","expo":"^51.0.39","expo-asset":"~12.0.12","expo-audio":"~1.1.1","expo-auth-session":"~7.0.10","expo-blur":"~15.0.8","expo-clipboard":"~8.0.8","expo-constants":"~18.0.13","expo-crypto":"~15.0.8","expo-dev-client":"~6.0.20","expo-font":"~14.0.11","expo-haptics":"~15.0.8","expo-image":"~3.0.11","expo-linear-gradient":"~15.0.8","expo-linking":"~8.0.11","expo-navigation-bar":"~5.0.10","expo-router":"~6.0.23","expo-secure-store":"~15.0.8","expo-sharing":"~14.0.8","expo-splash-screen":"~31.0.13","expo-status-bar":"~3.0.9","expo-symbols":"~1.0.8","expo-system-ui":"~6.0.9","expo-web-browser":"~15.0.10","lottie-react-native":"~7.3.1","react":"18.2.0","react-dom":"18.2.0","react-native":"0.74.5","react-native-gesture-handler":"~2.28.0","react-native-mmkv":"^4.1.2","react-native-reanimated":"~4.1.1","react-native-safe-area-context":"~5.6.0","react-native-screens":"~4.16.0","react-native-svg":"15.12.1","react-native-web":"~0.21.0","react-native-worklets":"0.5.1","react-redux":"^9.2.0","redux-persist":"^6.0.0"},"devDependencies":{"@types/react":"^18.3.3","eslint":"^9.25.0","eslint-config-expo":"~10.0.0","typescript":"~5.9.2"},"private":true}
